Add support for cloud Jira

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,11 +16,11 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* полупрозрачный черный фон */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* чтобы лоадер был поверх остального контента */
+  z-index: 9999;
 }
 
 .loader {
@@ -56,10 +56,10 @@ a:hover {
 
 .timeline {
   display: flex;
-  height: 30px; /* Высота полосы таймлайна */
-  background-color: #f1f1f1; /* Фон полосы таймлайна */
-  border-radius: 5px; /* Скругление краев полосы таймлайна */
-  overflow: hidden; /* Скрываем содержимое, выходящее за пределы полосы таймлайна */
+  height: 30px;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .timeline-segment {
@@ -69,10 +69,9 @@ a:hover {
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
-  padding: 0 2px; /* Паддинги для текста внутри сегмента */
+  padding: 0 2px;
 }
 
-/* Примеры цветов для сегментов. Нужно определить классы для всех статусов, которые будут использоваться. */
 .color0 {
   background-color: #1f77b4;
 }
@@ -165,7 +164,7 @@ a:hover {
 }
 
 .timeline-segment > span {
-  font-size: 12px; /* Размер шрифта текста */
-  color: white; /* Цвет текста */
-  user-select: none; /* Запретить выделение текста */
+  font-size: 12px;
+  color: white;
+  user-select: none;
 }
